--- a/src/app/components/manager-page/manager-view/manager-view.component.scss
+++ b/src/app/components/manager-page/manager-view/manager-view.component.scss
@@ -380,3 +380,95 @@ body{
     background-color: rgb(228, 208, 200);
 }
 // - - - - - - - - - - - - - - - - - 
+
+// popup dialog
+
+.details-reset summary::before{
+    display: none;
+}
+
+.details-reset>summary{
+  list-style: none;
+}
+
+.details-overlay{
+    display: block;
+    position: relative!important;
+}
+
+.details-overlay[open]>summary::before {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 80;
+  display: block;
+  cursor: default;
+  content: " ";
+  background: transparent;
+}
+
+.details-overlay-dark[open]>summary::before{
+    z-index: 99;
+    background: rgba(27,31,35,.5);
+}
+
+details summary:focus{
+    outline: none;
+  }
+
+details summary::-webkit-details-marker {
+    display:none;
+  }
+
+.anim-fade-in.fast{
+    animation-duration: 0.3s;
+}
+
+details:not([open])>:not(summary) {
+    display: none!important;
+}
+
+.Box--overlay {
+    width: 448px;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border-color: #444d56;
+    box-shadow: 0 0 18px rgba(0,0,0,.4);
+}
+
+.anim-fade-in{
+    animation-name: fade-in;
+    animation-timing-function: ease-in-out;
+}
+
+.Box{
+    background-color: #fff;
+    border: 1px solid #e1e4e8;
+    border-radius: 6px;
+}
+
+.details-dialog {
+    position: fixed;
+    margin: 10vh auto;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+    max-height: 80vh;
+    max-width: 90vw;
+    width: 448px;
+}
+
+@keyframes fade-in{
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
