--- a/src/app/components/manager-page/user-view/user-view.component.scss
+++ b/src/app/components/manager-page/user-view/user-view.component.scss
@@ -37,11 +37,11 @@
 .user-position{
     font-size: 0.8em;
     padding: 0.2em;
-    //border: 0.06em solid #e1e4e8;
-    margin-left: 0.3em;
+    border: 0.06em solid #2c365d;
+    border-radius: 0.6em;
+    margin-left: 0.5em;
     width: 10%;
     text-align: center;
 
-    background-color: #2c365d;
-    color: white;
+    color: #344174;
 }
