--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -114,7 +114,7 @@
     margin: 0.3em 0.5em;
     padding: 0 0.3em 0.1em 0.3em;
     text-align: center;
-    border: 0.06em solid #e1e4e8!important;
+    border: 0.06em solid rgb(99, 44, 104)!important;
     border-radius: 0.6em;
     //background-color: rgb(99, 44, 104);
   }
