--- a/src/app/components/manager-page/project-view/project-view.component.scss
+++ b/src/app/components/manager-page/project-view/project-view.component.scss
@@ -39,11 +39,11 @@ p{
 }
 
 .task-status{
+    border: 0.06em solid #28a745;
     margin-left: 0.3em;
     padding: 0.3em;
     font-size: 0.55em;
-    background-color: green;
-    color: white;
+    color: #22863a;
     vertical-align: middle;
     border-radius: 0.6em;
 }
@@ -53,12 +53,12 @@ p{
 }
 
 .task-count{
+    border: 0.06em solid  #cc800e;
     border-radius: 0.6em;
     margin-right: 0.3em;
     padding: 0.3em 0.5em 0.4em 0.45em;
     vertical-align: middle;
     font-size: 0.55em;
     font-weight: bold;
-    background-color: #cc800e;
-    color: white;
+    color:  #cc800e;
 }
