--- a/src/app/components/manager-page/manager-view/manager-view.component.scss
+++ b/src/app/components/manager-page/manager-view/manager-view.component.scss
@@ -367,6 +367,10 @@ body{
     cursor: pointer;
 }
 
+.enabled{
+    //cheking commits
+}
+
 .invite-button:hover{
     border: 0.07em solid #cc800e;
     color: #cc800e;
