--- a/src/app/components/popup-dialogs/create-project-dialog/create-project-dialog.component.html
+++ b/src/app/components/popup-dialogs/create-project-dialog/create-project-dialog.component.html
@@ -1,1 +1,21 @@
-<p>create-project-dialog works!</p>
+<div class="project-creation-container">
+    <div class="project-creation-header">
+        <h3 class="project-creation-title">Start new project</h3>
+        <p class="project-creation-description">Create new project by providing essential information (title, description etc.) and assigning its manager.</p>
+    </div>
+    <div class="project-creation-form">
+        <div class="project-creation-input-container">
+            <h3 class="project-creation-input-header">Title:</h3>
+            <input type="text" class="project-creation-input" placeholder="Project title...">
+        </div>
+        <div class="project-creation-input-container">
+            <h3 class="project-creation-input-header">Description:</h3>
+            <textarea type="text" class="project-creation-input" placeholder="Description..."></textarea>
+        </div>
+        <div style="text-align: center;" class="project-creation-input-container">
+            <button class="project-creation-submit">
+                <span style="opacity: 0.7;">Submit</span>
+            </button>
+        </div>
+    </div>    
+</div>
