--- a/src/app/components/popup-dialogs/create-task-dialog/create-task-dialog.component.html
+++ b/src/app/components/popup-dialogs/create-task-dialog/create-task-dialog.component.html
@@ -1,1 +1,21 @@
-<p>create-task-dialog works!</p>
+<div class="task-creation-container">
+    <div class="task-creation-header">
+        <h3 class="task-creation-title">Add new task</h3>
+        <p class="task-creation-description">Add new task by providing needed information such as title, description, deadline etc. You can assign performer now or later on the Team panel.</p>
+    </div>
+    <div class="task-creation-form">
+        <div class="task-creation-input-container">
+            <h3 class="task-creation-input-header">Title:</h3>
+            <input type="text" class="task-creation-input" placeholder="Project title...">
+        </div>
+        <div class="task-creation-input-container">
+            <h3 class="task-creation-input-header">Description:</h3>
+            <textarea type="text" class="task-creation-input" placeholder="Description..."></textarea>
+        </div>
+        <div style="text-align: center;" class="task-creation-input-container">
+            <button class="task-creation-submit">
+                <span style="opacity: 0.7;">Submit</span>
+            </button>
+        </div>
+    </div>    
+</div>
