--- a/src/app/components/manager-page/manager-view/manager-view.component.scss
+++ b/src/app/components/manager-page/manager-view/manager-view.component.scss
@@ -82,9 +82,11 @@ body{
     .grid-sidebar{
         display: none;
     }
-
+    
     .create-task{
-        width: 20%;
+        width: 100%;
+        margin-right: 3em;
+        text-align: center;
     }
 }
 
@@ -168,8 +170,7 @@ body{
 }
 
 .button-container{
-    margin-top: 2em;
-    margin-bottom: 2em;
+    margin: 2em 3em;
     text-align: center;
 }
 
@@ -198,15 +199,15 @@ body{
 
 .project-search-container{
     margin: 0.3em;
-    margin-left: 1em;
     display: flex;
 }
 
 .project-input{
-    font-family: 'Fira Mono', monospace;
+    //font-family: 'Fira Mono', monospace;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 0.85em;
     padding: 0.4em;
-    text-align: center;
+    //text-align: center;
     border: 0.06em solid #e1e4e8;
     border-radius: 0.6em;
 
@@ -272,10 +273,11 @@ body{
 }
 
 .task-input{
-    font-family: 'Fira Mono', monospace;
+    //font-family: 'Fira Mono', monospace;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 0.85em;
     padding: 0.4em;
-    text-align: center;
+    //text-align: center;
     border: 0.06em solid #e1e4e8;
     border-radius: 0.6em;
 
@@ -365,10 +367,6 @@ body{
     font-size: 0.8em;
     font-weight: bold;
     cursor: pointer;
-}
-
-.enabled{
-    //cheking commits
 }
 
 .invite-button:hover{
