--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
             <div class="dropdown-divider"></div>
             <div class="dropdown-item"><a>Profile</a></div>
             <div class="dropdown-item"><a>Projects</a></div>
-            <div class="dropdown-item"><a>Log out</a></div>
+            <div (click)="logout()" class="dropdown-item"><a>Log out</a></div>
         </div>
     </details>
 </header>
