--- a/src/app/components/manager-page/manager-view/manager-view.component.scss
+++ b/src/app/components/manager-page/manager-view/manager-view.component.scss
@@ -156,6 +156,7 @@ body{
     padding-right: .5em;
     vertical-align: middle;
     font-weight: normal;
+    cursor: pointer;
 }
 
 .projects-list{
@@ -163,7 +164,7 @@ body{
     margin-top: 1em;
     padding: .2em;
 
-    max-height: 18em;
+    max-height: 15em;
     overflow: auto;
 
     border: 0.06em solid #e1e4e8;
@@ -184,16 +185,16 @@ body{
     cursor: pointer;
 }
 
-.create-project:hover{
+.action-btn:hover{
     border: 0.09em solid #cc800e;
     color: #cc800e;
 }
 
-.create-project:focus{
+.action-btn:focus{
     outline: none;
 }
 
-.create-project:active{
+.action-btn:active{
     background-color: rgb(228, 208, 200);
 }
 
@@ -295,26 +296,13 @@ body{
     border: 0.07em solid #e1e4e8;
     border-radius: 0.6em;
     padding: 0.4em;
-    font-size: 0.9em;
-    opacity: 0.7;
+    font-size: 0.8em;
+    font-weight: bold;
     cursor: pointer;
 }
 
 .task-button-container{
     width: 89%!important;
-}
-
-.create-task:hover{
-    border: 0.07em solid #cc800e;
-    color: #cc800e;
-}
-
-.create-task:active{
-    background-color: rgb(228, 208, 200);
-}
-
-.create-task:focus{
-    outline: none;
 }
 
 // - - - - - - - - - - - - - - - - - 
@@ -367,19 +355,6 @@ body{
     font-size: 0.8em;
     font-weight: bold;
     cursor: pointer;
-}
-
-.invite-button:hover{
-    border: 0.07em solid #cc800e;
-    color: #cc800e;
-}
-
-.invite-button:focus{
-    outline: none;
-}
-
-.invite-button:active{
-    background-color: rgb(228, 208, 200);
 }
 // - - - - - - - - - - - - - - - - - 
 
