--- a/src/app/components/manager-page/task-view/task-view.component.html
+++ b/src/app/components/manager-page/task-view/task-view.component.html
@@ -1,7 +1,7 @@
 <div class="task-view-container">
     <div class="task-info-container">
-        <p class="task-title truncate">{{task.title}}</p>
-        <p class="task-description">{{task.title}}</p>
+        <p class="task-title">{{task.title}}</p>
+        <p class="task-description truncate">{{task.description}}</p>
         <div class="avatar-wrapper">
             <img class="executor-avatar" src="../../../../assets/images/default-user.png">
         </div>
