--- a/src/app/components/popup-dialogs/invitation-dialog/invitation-dialog.component.scss
+++ b/src/app/components/popup-dialogs/invitation-dialog/invitation-dialog.component.scss
@@ -70,6 +70,7 @@
     width: 12px;
     height: 12px;
     opacity: 0.6;
+    margin-top: 0.3em;
     vertical-align: text-bottom;
     cursor: pointer;
 }
